# VirtualPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.h  emulator.cc  emulator.h  exception.cc  exception.h  main.cc  memory.cc  memory.h  test.cc
arch/: arm.cc  arm.h  thumb.cc  thumb.h
tests/thumb/: add.s  add01.ok  add01.s  alu.ok  alu.s  branch.ok  branch.s  cmp01.ok  cmp01.s  ldr.s  ldr01.ok  ldr01.s  loop.ok  loop.s  loop01.ok  loop01.s  misc.ok  misc.s  reg.ok  reg.s  shift.ok  shift.s  shift01.ok  shift01.s  sub.ok  sub.s  sub01.ok  sub01.s
tools/: CodeCoverage.cmake  build-tests.sh
